# repo-bleed

./: README.md  dummy_config.py  pyproject.toml
.github/workflows/: python-package-conda.yml
repo_bleed/: cli.py  rules.py  scanner.py
repo_bleed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
