[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-bleed"
version = "1.0.0"
authors = [
  { name="Adi", email="adityajyotikar01@gmail.com" },
]
description = "A high-speed Git history scanner for leaked API keys and secrets."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "colorama"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
repo-bleed = "repo_bleed.cli:main"